# mc_clone

./: .gitignore  CMakeLists.txt  README.md  a.out  glad.c  glad.c:Zone.Identifier  main  main.cpp
Libraries/include/glad/: glad.h
buil/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.cpp
